--- a/graphics/graphic/css/main.scss
+++ b/graphics/graphic/css/main.scss
@@ -5,6 +5,18 @@
 @import "common/css/_type";
 @import "graphics/graphic/css/_layout";
 
+%centercolumn {
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+	@include breakpoint(640px) {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
 
-
-
+@import "common/css/mast";
+@import "common/css/header";
+@import "common/css/footer";
