--- a/graphics/map/css/_layout.scss
+++ b/graphics/map/css/_layout.scss
@@ -1,3 +1,63 @@
 .article-graphic.map {
+
+	@include breakpoint(640px) {
+		max-width: 21em;
+		float: right;
+		@include rhythm(0, 0, 0, 2);
+		padding-left: 1em;
+	}
+
+	p.subtitle {
+		font-family: $sansSerifStrong;
+	}
+
+	p.description {
+		font-family: $sansSerif;
+		@include adjust-font-size-to($s3);
+	}
+
+	.content {
+		position: relative;
+
+		.baselayer {
+			img {
+				vertical-align: bottom;
+			}
+		}
+
+		.annotation-texts {
+			font-family: $sansSerif;
+			@include adjust-font-size-to($s3);
+			@include adjust-leading-to(1);
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+
+			.annotation {
+				position: absolute;
+				background: rgba(255, 255, 255, 0.75);
+				padding: 0.3em 0.5em;
+				border: solid black 1px;
+  			}
+		}
+
+		.annotation-guides {
+			position: absolute;
+			top: 0;
+			left: 0;
+
+			g.lines line {
+				stroke: black;
+				// stroke-opacity: 0.5;
+				shape-rendering: crispEdges;
+  			}
+		}
+	}
 	
+}
+
+.meter-modal-block.bg-modal--meter {
+	display: none;
 }
