--- a/graphics/map/css/_layout.scss
+++ b/graphics/map/css/_layout.scss
@@ -1,7 +1,7 @@
 .article-graphic.map {
 
 	@include breakpoint(640px) {
-		max-width: 21em;
+		max-width: 300px;
 		float: right;
 		@include rhythm(0, 0, 0, 2);
 		padding-left: 1em;
@@ -14,6 +14,7 @@
 	p.description {
 		font-family: $sansSerif;
 		@include adjust-font-size-to($s3);
+		@include adjust-leading-to(1);
 	}
 
 	.content {
@@ -22,6 +23,54 @@
 		.baselayer {
 			img {
 				vertical-align: bottom;
+			}
+		}
+
+		svg.map {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+
+			path.BRA {
+				fill: none;
+				stroke: #bf6151;
+				stroke-width: 2;
+			}
+
+			path.CSCNC {
+				fill: none;
+				stroke: black;
+				stroke-dasharray: 6, 6;
+				stroke-width: 1.5;
+				stroke-opacity: 0.8;
+			}
+		}
+
+		.map-labels {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+
+			.map-label {
+				position: absolute;
+
+				span {
+					display: block;
+				}
+
+				span.label {
+					margin-left: -50%;
+					font-family: $sansSerif;
+					text-transform: uppercase;
+					letter-spacing: 2px;
+					opacity: 0.4;
+					@include adjust-font-size-to(9px);
+					@include adjust-leading-to(1);
+				}
 			}
 		}
 
@@ -39,7 +88,6 @@
 				position: absolute;
 				background: rgba(255, 255, 255, 0.75);
 				padding: 0.3em 0.5em;
-				border: solid black 1px;
   			}
 		}
 
@@ -47,10 +95,16 @@
 			position: absolute;
 			top: 0;
 			left: 0;
+			width: 100%;
+			height: 100%;
+
+			g.circles circle {
+				fill: rgba(0, 0, 0, 0.8);
+			}
 
 			g.lines line {
 				stroke: black;
-				// stroke-opacity: 0.5;
+				stroke-opacity: 0.8;
 				shape-rendering: crispEdges;
   			}
 		}
