--- a/graphics/map/css/_layout.scss
+++ b/graphics/map/css/_layout.scss
@@ -7,17 +7,61 @@
 		padding-left: 1em;
 	}
 
+	@include rhythm(0, 0, 0, 2);
+
 	p.subtitle {
 		font-family: $sansSerifStrong;
+		@include rhythm(0, 0, 0, 0);
 	}
 
 	p.description {
 		font-family: $sansSerif;
 		@include adjust-font-size-to($s3);
 		@include adjust-leading-to(1);
+		@include rhythm(1/2, 0, 0, 1/2);
+	}
+
+	ul.legend {
+		width: 100%;
+		overflow: hidden;
+
+		li {
+			float: left;
+			font-family: $sansSerif;
+			@include adjust-font-size-to(11px);
+			text-transform: uppercase;
+			color: rgba(0, 0, 0, 0.8);
+
+			hr {
+				border:none;
+				color:#fff;
+				background-color:#fff;
+				height:1px;
+				width:4em;
+				display: inline-block;
+				font-size: 5px;
+				margin-right: 0.5em;
+				position: relative;
+				top: 2px;
+			}
+
+			&.BRA hr {
+				border-top: 2px solid #bf6151;
+			}
+
+			&.CSCNC hr {
+				border-top: 2px dashed rgba(0, 0, 0, 0.8);
+			}
+
+			&:first-child {
+				margin-right: 1em;
+			}
+		}
 	}
 
 	.content {
+		width: 100%;
+		overflow: hidden;
 		position: relative;
 
 		.baselayer {
@@ -48,6 +92,19 @@
 			}
 		}
 
+		.map-distance-legend {
+			position: absolute;
+			bottom: 0.5em;
+			right: 0.5em;
+			border-bottom: solid rgba(0, 0, 0, 0.3) 1px;
+			color: rgba(0, 0, 0, 0.5);
+			font-family: $sansSerif;
+			text-align: right;
+			font-size: 10px;
+			// @include adjust-font-size-to(10px);
+			// @include adjust-leading-to(1);
+		}
+
 		.map-labels {
 			position: absolute;
 			top: 0;
@@ -68,16 +125,21 @@
 					text-transform: uppercase;
 					letter-spacing: 2px;
 					opacity: 0.4;
-					@include adjust-font-size-to(9px);
-					@include adjust-leading-to(1);
+					font-size: 9px;
+					line-height: 13.5px;
+					// @include adjust-font-size-to(9px);
+					// @include adjust-leading-to(1);
 				}
 			}
 		}
 
 		.annotation-texts {
 			font-family: $sansSerif;
-			@include adjust-font-size-to($s3);
-			@include adjust-leading-to(1);
+			font-size: 11px;
+			line-height: 16.5px;
+			// @include adjust-font-size-to($s3);
+
+			// @include adjust-leading-to(1);
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -88,6 +150,11 @@
 				position: absolute;
 				background: rgba(255, 255, 255, 0.75);
 				padding: 0.3em 0.5em;
+  			}
+
+  			span.name {
+  				font-weight: bold;
+  				display: block;
   			}
 		}
 
